--- a/VkTypeAppGB/VkTypeAppGB/Main.storyboard
+++ b/VkTypeAppGB/VkTypeAppGB/Main.storyboard
@@ -167,7 +167,7 @@
         <!--My Groups-->
         <scene sceneID="ZWc-GP-tNY">
             <objects>
-                <viewController title="My Groups" id="JXC-f3-Bcy" sceneMemberID="viewController">
+                <viewController title="My Groups" id="JXC-f3-Bcy" customClass="MyGroupsViewController" customModule="VkTypeAppGB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SCw-ZL-ykJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -175,6 +175,67 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V0T-iz-Rzx">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MyGroupsTableViewCell" id="Rts-vw-oOD" customClass="MyGroupsTableViewCell" customModule="VkTypeAppGB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="110.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rts-vw-oOD" id="dEh-lH-wzP">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TIm-xf-JFH">
+                                                    <rect key="frame" x="28" y="15" width="80.5" height="80.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="6To-uO-PDm"/>
+                                                        <constraint firstAttribute="width" secondItem="TIm-xf-JFH" secondAttribute="height" multiplier="1:1" id="sbB-tA-yhc"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DescriptionOfTheGroup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAE-gT-V3B">
+                                                    <rect key="frame" x="124.5" y="62" width="261.5" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BF5-4y-qZC">
+                                                    <rect key="frame" x="374" y="45.5" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="UaR-78-07y"/>
+                                                        <constraint firstAttribute="width" constant="20" id="fx4-IX-ExZ"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button" image="minus.circle" catalog="system"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NameOfGroup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qwk-Bg-2D6">
+                                                    <rect key="frame" x="124" y="25" width="242" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="TIm-xf-JFH" firstAttribute="leading" secondItem="dEh-lH-wzP" secondAttribute="leadingMargin" constant="8" id="2fb-Jy-ddA"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="TIm-xf-JFH" secondAttribute="bottom" constant="4" id="7ED-7Y-d6i"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="zAE-gT-V3B" secondAttribute="trailing" constant="8" id="G9w-bj-cEN"/>
+                                                <constraint firstItem="Qwk-Bg-2D6" firstAttribute="top" secondItem="dEh-lH-wzP" secondAttribute="topMargin" constant="14" id="MN1-rM-9Qj"/>
+                                                <constraint firstAttribute="trailing" secondItem="BF5-4y-qZC" secondAttribute="trailing" constant="20" id="SE6-NM-9Th"/>
+                                                <constraint firstItem="Qwk-Bg-2D6" firstAttribute="leading" secondItem="TIm-xf-JFH" secondAttribute="trailing" constant="15.5" id="WJh-lj-mJK"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="zAE-gT-V3B" secondAttribute="bottom" constant="16" id="aHB-46-cKj"/>
+                                                <constraint firstItem="TIm-xf-JFH" firstAttribute="top" secondItem="dEh-lH-wzP" secondAttribute="topMargin" constant="4" id="edE-9S-44n"/>
+                                                <constraint firstItem="BF5-4y-qZC" firstAttribute="centerY" secondItem="TIm-xf-JFH" secondAttribute="centerY" id="iJ6-LQ-BHh"/>
+                                                <constraint firstItem="BF5-4y-qZC" firstAttribute="leading" secondItem="Qwk-Bg-2D6" secondAttribute="trailing" constant="8" id="qVT-yv-wv4"/>
+                                                <constraint firstItem="zAE-gT-V3B" firstAttribute="leading" secondItem="TIm-xf-JFH" secondAttribute="trailing" constant="16" id="qYm-0J-E1R"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="groupDescription" destination="zAE-gT-V3B" id="Hg2-v0-KLX"/>
+                                            <outlet property="groupImageView" destination="TIm-xf-JFH" id="zxt-3O-Jzs"/>
+                                            <outlet property="groupName" destination="Qwk-Bg-2D6" id="d8k-ZE-51E"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="JXC-f3-Bcy" id="34g-jT-2dc"/>
+                                    <outlet property="delegate" destination="JXC-f3-Bcy" id="2TZ-JW-5o9"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6vH-yu-b3s"/>
@@ -194,10 +255,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="V0T-iz-Rzx" id="yCG-YB-c7b"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K4D-YY-DXt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2142" y="146"/>
+            <point key="canvasLocation" x="2140.5797101449275" y="145.98214285714286"/>
         </scene>
         <!--All Groups-->
         <scene sceneID="m33-Mr-tXM">
@@ -260,14 +324,39 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FriendsTableViewCell" id="RrW-xc-YVD" customClass="FriendsTableViewCell" customModule="VkTypeAppGB" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FriendsTableViewCell" id="RrW-xc-YVD" customClass="FriendsTableViewCell" customModule="VkTypeAppGB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="110.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RrW-xc-YVD" id="s3h-9p-dPM">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="08Z-CB-0jE">
+                                                    <rect key="frame" x="24" y="15" width="80.5" height="80.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="dyV-ph-gnW"/>
+                                                        <constraint firstAttribute="width" secondItem="08Z-CB-0jE" secondAttribute="height" multiplier="1:1" id="qUb-BM-z5T"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX3-KO-HsB">
+                                                    <rect key="frame" x="120.5" y="41" width="265.5" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="08Z-CB-0jE" firstAttribute="leading" secondItem="s3h-9p-dPM" secondAttribute="leadingMargin" constant="4" id="Aag-Ob-aqO"/>
+                                                <constraint firstItem="08Z-CB-0jE" firstAttribute="top" secondItem="s3h-9p-dPM" secondAttribute="topMargin" constant="4" id="I3u-jI-UvD"/>
+                                                <constraint firstItem="hX3-KO-HsB" firstAttribute="leading" secondItem="08Z-CB-0jE" secondAttribute="trailing" constant="16" id="gLs-S8-uZ8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="hX3-KO-HsB" secondAttribute="trailing" constant="8" id="hsK-j9-Nuf"/>
+                                                <constraint firstItem="hX3-KO-HsB" firstAttribute="centerY" secondItem="08Z-CB-0jE" secondAttribute="centerY" id="pzS-2d-gAv"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="08Z-CB-0jE" secondAttribute="bottom" constant="4" id="xCE-g6-SYV"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="friendAvatarImage" destination="08Z-CB-0jE" id="SDO-Yo-o6K"/>
+                                            <outlet property="friendName" destination="hX3-KO-HsB" id="47F-vZ-vd9"/>
                                             <segue destination="No5-Mx-eaF" kind="show" id="KCZ-vA-cBq"/>
                                         </connections>
                                     </tableViewCell>
@@ -347,8 +436,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="cKl-J9-UsW" kind="relationship" relationship="viewControllers" id="3FW-de-iJ1"/>
                         <segue destination="Gwe-nd-Y96" kind="relationship" relationship="viewControllers" id="h7R-rJ-Zw9"/>
+                        <segue destination="cKl-J9-UsW" kind="relationship" relationship="viewControllers" id="xs8-TM-DjW"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WLM-Lr-8EK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -357,6 +446,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="minus.circle" catalog="system" width="128" height="121"/>
         <image name="person.3" catalog="system" width="128" height="62"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="plus" catalog="system" width="128" height="113"/>
