--- a/VkTypeAppGB/VkTypeAppGB/Main.storyboard
+++ b/VkTypeAppGB/VkTypeAppGB/Main.storyboard
@@ -391,6 +391,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                             <constraints>
                                                 <constraint firstItem="08Z-CB-0jE" firstAttribute="leading" secondItem="s3h-9p-dPM" secondAttribute="leadingMargin" constant="4" id="Aag-Ob-aqO"/>
                                                 <constraint firstItem="08Z-CB-0jE" firstAttribute="top" secondItem="s3h-9p-dPM" secondAttribute="topMargin" constant="2" id="I3u-jI-UvD"/>
@@ -523,6 +524,9 @@
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiarySystemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
